--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-flip-clock": "^1.0.4",
     "sass-loader": "8.0.2",
     "styled-components": "^5.2.0"
   },
